index.css
:root {
    --text-color: #e2dee3;
    --highlight-color: #f1f6f7;
    --text-color2: #a7a6c6;
    --link-color: #6584b5;
    --bg-color: #000000;
    --bg-color2: #343441;
    --bg-color3: #34344122;
    --bg-color4: #000000e8;
    --body-font: 'Kodchasan', sans-serif;
    --header-font: 'Amatic SC', sans-serif;
    --subheader-font: 'Economica', sans-serif;
}



body {
    font-family: var(--body-font);
    color: var(--text-color);
    background-color: var(--bg-color);
    background-image: url(./images/hw-web-bg.png);
    background-position: center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    overflow: hidden;
    margin: 0;
    cursor: default;
    bottom: 0;
    position: static;
}
button {
    padding: 0;
    border: 0;
    margin: 0;
    background-color: #00000000;
}



.link {
    color: var(--link-color);
    text-decoration: none;
    transition: 0.3s;
}
.link:hover {
    color: var(--highlight-color);
    transition: 0.3s;
}

.highlight {
    color: var(--highlight-color)
}



.content-container {
    max-width: 1400px;
    max-height: 100vh;
    overflow: hidden;
    position: fixed;
    right: 0;
    left: 0;
    margin: auto;
}



.header-link {
    text-decoration: none;
    color: var(--text-color);
}



.nav-container {
    float: left;
    width: 305px;
    max-height: 100vh;
    position: absolute;
}
.nav-container img {
    z-index: 2;
    position: relative;
    left: 10px;
}
.nav-links {
    display: flex;
    justify-content: center;
    width: 305px;
    max-height: 30vh;
    position: fixed;
    z-index: 2;
    top: calc(200px + 10vh)
}
.nav-container ul {
    list-style-type: none;
    text-align: center;
    font-family: var(--subheader-font);
    color: var(--text-color2);
    font-size: 23pt;
    padding: 0;
    margin: 0;
}
.nav-container li {
    margin: calc(100vh / 30) 0px;
}
.nav-container a {
    text-decoration: none;
    color: var(--text-color2);
    transition: 0.3s;
}
.nav-container a:hover {
    color: var(--link-color);
    letter-spacing: 2px;
    transition: 0.3s;
}
.nav-bg {
    background-color: var(--bg-color2);
    width: 205px;
    margin: 0px 50px;
    height: 100vh;
    -webkit-mask-image: linear-gradient(to bottom, transparent 10%, black 60%);
    mask-image: linear-gradient(to bottom, transparent 10%, black 90%);
    top: 0px;
    position: fixed;
}



.header {
    font-family: var(--header-font);
    font-weight: bold;
    font-size: 80px;
    color: var(--text-color);
    margin: 50px 0px 0px 325px;
    padding: 0;
}
.subheader {
    font-family: var(--subheader-font);
    color: var(--text-color2);
    font-size: 25pt;
    margin: 0 0 0 330px;
    font-weight: lighter;
    padding: 0;
}



.body-content {
    max-width: 1075px;
    height: calc(100vh - 159px);
    margin: 30px 0 0 305px;
    display: flex;
    flex-direction: column;
    background-image: url(./images/hw-web-bgopacity.png);
    background-repeat: no-repeat;
    overflow-y: scroll;
    scroll-behavior: smooth;
    scrollbar-color: var(--bg-color2);
    scrollbar-width: thin;
}
.body-content::-webkit-scrollbar {
    width: 5px;
    background-color: var(--bg-color3);
    border-radius: 2px;
}
.body-content::-webkit-scrollbar-thumb {
    background-color: var(--bg-color2);
    border-radius: 2px;
}



.page-header {
    font-family: var(--header-font);
    font-size: 40pt;
    font-weight: bold;
    text-align: center;
    margin: 10px 0 0 0;
}
.page-subheader {
    font-family: var(--subheader-font);
    color: var(--text-color2);
    font-size: 21pt;
    text-align: center;
    margin: 10px 0 0 0;
    font-weight: lighter;
}
.page-text {
    font-size: 12pt;
    text-align: left;
    align-self: center;
    margin: 20px 40px 0px;
}



.back-button {
    display: block;
    float: right;
    padding-right: 20px;
    font-size: 30px;
}
.back-button a {
    text-decoration: none;
    color: var(--link-color);
    transition: 0.3s;
}
.back-button a:hover {
    color: var(--highlight-color);
    letter-spacing: 2px;
    transition: 0.3s;
}



.loading {
    text-align: center;
    font-family: var(--subheader-font);
    color: var(--text-color2);
    font-size: 20pt;
    position: relative;
    top: 25vh;
}



.updates {
    margin-bottom: 100px;
}
.update-block {
    background-color: var(--bg-color3);
    max-width: 1000px;
    padding: 20px;
    margin: 10px 0px;
}
.update-date {
    font-family: var(--subheader-font);
    color: var(--text-color2);
    font-size: 19pt;
    padding: 0 0 20px 0;
    margin: 0;
    font-weight: lighter;
}
.update-text {
    padding: 0 0 10px 0;
    margin: 0;
}



.illustration-masonry {
    columns: 5 150px;
    column-gap: 1rem;
    margin: 10px 30px 100px 20px;
    transition: opacity 0.3s;
  }
.illustration-masonry div {
    width: 150px;
    background: #00000000;
    color: white;
    margin: 0 20px 0 0;
    display: inline-block;
    width: 100%;
    text-align: center;
    cursor: pointer;
}

.illustration-modal {
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background-color: var(--bg-color4);
    z-index: 3;
}
.illustration-modal-inner {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    width: 100%;
}
.illustration-modal-image {
    max-height: 100vh;
    max-width: 100vw;
}
.close-illustration-modal {
    position: absolute;
    top: 30px;
    right: 30px;
    font-family: var(--subheader-font);
    font-size: 35px;
    text-shadow: 0px 0px 10px var(--bg-color);
    color: var(--link-color);
    transition: 0.3s;
    cursor: pointer;
}
.close-illustration-modal:hover {
    color: var(--highlight-color);
    letter-spacing: 3px;
    transition: 0.3s;
}



.tevdren-links {
    font-family: var(--subheader-font);
    font-size: 20pt;
    display: flex;
    width: 100%;
    flex-direction: row;
    justify-content: space-around;
}
.tevdren-links a {
    display: block;
    margin: 20px;
}
.tevdren-comics {
    display: flex;
    width: calc(100% - 20px);
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
    margin-bottom: 100px;
}
.tevdren-comiclink {
    text-align: center;
    padding-bottom: 20px;
    cursor: pointer;
}
.tevdren-comiclink img {
    background-color: var(--bg-color2);
    width: 150px;
    height: 150px;
    margin: 10px;
    display: block;
}
.tevdren-comiclink h5, span {
    font-family: var(--subheader-font);
    font-size: 20pt;
    color: var(--text-color2);
    width: 150px;
    margin: auto;
    font-weight: lighter;
    min-height: 62px;
}
.tevdren-newcomic {
    animation: newcomic 3s ease-in-out infinite;
    -moz-animation: newcomic 3s ease-in-out infinite;
    -webkit-animation: newcomic 3s ease-in-out infinite;
}
@keyframes newcomic {
    0% {box-shadow: 0px 0px 1px 1px var(--highlight-color);}
    50% {box-shadow: 0px 0px 10px 5px var(--highlight-color);}
    100% {box-shadow: 0px 0px 1px 1px var(--highlight-color);}
}
@-moz-keyframes newcomic {
    0% {box-shadow: 0px 0px 1px 1px var(--highlight-color);}
    50% {box-shadow: 0px 0px 10px 5px var(--highlight-color);}
    100% {box-shadow: 0px 0px 1px 1px var(--highlight-color);}
}
@-webkit-keyframes newcomic {
    0% {box-shadow: 0px 0px 1px 1px var(--highlight-color);}
    50% {box-shadow: 0px 0px 10px 5px var(--highlight-color);}
    100% {box-shadow: 0px 0px 1px 1px var(--highlight-color);}
}

.comic-modal {
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background-color: var(--bg-color4);
    z-index: 3;
}
.comic-modal-inner {
    display: flex;
    justify-content: center;
    height: 100%;
    width: 100%;
    overflow-y: scroll;
    scroll-behavior: smooth;
    scrollbar-color: var(--bg-color2);
    scrollbar-width: thin;
}
.comic-modal-inner::-webkit-scrollbar {
    width: 5px;
    background-color: var(--bg-color3);
    border-radius: 2px;
}
.comic-modal-inner::-webkit-scrollbar-thumb {
    background-color: var(--bg-color2);
    border-radius: 2px;
}
.comic-modal-image {
    height: max-content;
    max-width: 100%;
}
.close-comic-modal {
    position: absolute;
    top: 30px;
    right: 30px;
    font-family: var(--subheader-font);
    font-size: 35px;
    text-shadow: 0px 0px 10px var(--bg-color);
    color: var(--link-color);
    transition: 0.3s;
    cursor: pointer;
}
.close-comic-modal:hover {
    color: var(--highlight-color);
    letter-spacing: 3px;
    transition: 0.3s;
}



.tevdren-ref-container {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}
.tevdren-ref-column {
    padding-bottom: 100px;
}
.tevdren-ref-block { /* NEED TO FIX THIS */
    text-align: center;
    font-family: var(--subheader-font);
    color: var(--text-color2);
    font-size: 20pt;
    padding: 20px 0px;
    cursor: pointer;
}
.tevdren-ref-block p {
    margin: 0;
}
.ref-modal {
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background-color: var(--bg-color4);
    z-index: 3;
}
.ref-modal-inner {
    display: flex;
    justify-content: center;
    height: 100%;
    width: 100%;
}
.carousel-container {
    align-self: center;
    display: flex;
}
.carousel-slide {
    text-align: center;
}
.carousel-slide img {
    max-width: 100%;
}
.carousel-number {
    position: absolute;
    top: 30px;
    left: 30px;
    font-family: var(--subheader-font);
    font-size: 35px;
    text-shadow: 0px 0px 10px var(--bg-color);
    color: var(--text-color);
}
.carousel-caption {
    font-size: 20pt;
    padding-top: 10px;
}
.carousel-prev, .carousel-next {
    align-self: center;
    padding: 20px;
    font-family: var(--subheader-font);
    color: var(--text-color2);
    font-size: 50pt;
    transform: scaleX(150%);
    transition: 0.3s;
}
.carousel-prev:hover {
    color: var(--highlight-color);
    transform: scaleX(200%) scaleY(150%) translateX(-10px);
}
.carousel-next:hover {
    color: var(--highlight-color);
    transform: scaleX(200%) scaleY(150%) translateX(10px);
}



.about-links {
    font-family: var(--subheader-font);
    font-size: 20pt;
    display: flex;
    width: 100%;
    flex-direction: row;
    justify-content: space-around;
    margin-top: 20px;
}
.about-link-block {
    margin: 20px;
    text-align: center;
}
.fa {
    padding-right: 10px;
}
.about-link-descrip {
    font-family: var(--body-font);
    color: var(--text-color2);
    font-size: 10pt;
    display: block;
    padding-top: 5px;
}

.secret {
    position: fixed;
    top: 20px;
    right: 50px;
    font-size: 20pt;
}
.secret a {
    color: var(--bg-color2);
    text-decoration: none;
}
.hmm-body {
    background-color: var(--bg-color);
    height: 100vh;
    width: 100vw;
    color: var(--text-color2);
}
.hmm-body span {
    position: absolute;
    bottom: 50px;
    right: 50px;
}

